hammerjs ausgebaut, security eingebaut
