# src/app/openapi/api-docs.yaml
@@ -3,7 +3,7 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-- url: http://167.86.76.193:9001
+- url: http://localhost:9001
   description: Generated server url
 paths:
   /api/users/:
@@ -20,6 +20,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserDto'
+      security:
+      - bearerAuth: []
     put:
       tags:
       - user-rest-controller
@@ -54,6 +56,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/UserDto'
+      security:
+      - bearerAuth: []
     delete:
       tags:
       - user-rest-controller
@@ -72,6 +76,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/UserDto'
+      security:
+      - bearerAuth: []
   /api/categories/:
     get:
       tags:
@@ -93,6 +99,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CategoryDto'
+      security:
+      - bearerAuth: []
     put:
       tags:
       - category-rest-controller
@@ -110,6 +118,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CategoryDto'
+      security:
+      - bearerAuth: []
     post:
       tags:
       - category-rest-controller
@@ -127,6 +137,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CategoryDto'
+      security:
+      - bearerAuth: []
     delete:
       tags:
       - category-rest-controller
@@ -145,6 +157,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CategoryDto'
+      security:
+      - bearerAuth: []
   /api/cards/:
     get:
       tags:
@@ -166,6 +180,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CardDto'
+      security:
+      - bearerAuth: []
     put:
       tags:
       - card-rest-controller
@@ -183,6 +199,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CardDto'
+      security:
+      - bearerAuth: []
     post:
       tags:
       - card-rest-controller
@@ -200,6 +218,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CardDto'
+      security:
+      - bearerAuth: []
     delete:
       tags:
       - card-rest-controller
@@ -287,6 +307,8 @@ paths:
                 - 509 BANDWIDTH_LIMIT_EXCEEDED
                 - 510 NOT_EXTENDED
                 - 511 NETWORK_AUTHENTICATION_REQUIRED
+      security:
+      - bearerAuth: []
   /api/users/login:
     post:
       tags:
@@ -305,6 +327,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/UserDto'
+      security:
+      - bearerAuth: []
   /api/learns/:
     get:
       tags:
@@ -326,6 +350,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CardDto'
+      security:
+      - bearerAuth: []
     post:
       tags:
       - learn-rest-controller
@@ -343,6 +369,44 @@ paths:
             '*/*':
               schema:
                 type: object
+      security:
+      - bearerAuth: []
+  /api/auth/register:
+    post:
+      tags:
+      - authentication-controller
+      operationId: register
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/AuthenticationResponse'
+  /api/auth/authenticate:
+    post:
+      tags:
+      - authentication-controller
+      operationId: authenticate
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/AuthenticationResponse'
   /healthCheck:
     get:
       tags:
@@ -376,6 +440,9 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/InfoDto'
+      security:
+      - bearerAuth: []
+      - oAuthNoScopes: []
   /api/users:
     get:
       tags:
@@ -390,6 +457,20 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserDto'
+      security:
+      - bearerAuth: []
+  /api/demo-controller:
+    get:
+      tags:
+      - demo-controller
+      operationId: sayHello
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: string
   /:
     get:
       tags:
@@ -457,6 +538,11 @@ components:
           format: int64
         correct:
           type: boolean
+    AuthenticationResponse:
+      type: object
+      properties:
+        token:
+          type: string
     InfoDto:
       type: object
       properties:
@@ -471,3 +557,14 @@ components:
           format: int64
         categoryName:
           type: string
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+    oAuthNoScopes:
+      type: oauth2
+      flows:
+        implicit:
+          authorizationUrl: https://api.example.com/oauth2/authorize
+          scopes: { }
